assets/themes/bootstrap/css/style.css
/* general overrides */
.navbar {
  margin-bottom: 0;
  height: 101px;
  border: none;
  border-bottom: 1px solid #e7e7e7;
}
.navbar-default {
  background-color: transparent;
}
.navbar-header {
  float: none;
}
.navbar-brand {
  display: block;
  background: url(/assets/images/faria-devtips.png);
  background-repeat: no-repeat;
  background-position: 0 0;
  float: none;
  height: 100px;
  padding: 0;
  margin-left: -180px!important;
}
.collapse{
  display: block;
}
.navbar-brand-2 {
  background: url(/assets/images/faria-devtips-2.png);
  background-repeat: no-repeat;
  background-position: 5px -25px;
  width: 400px;
  height: 100%;
}
.navbar-collapse{
  padding: 0;
}
.navbar-toggle {
  float: none;
}
.navbar-nav>li:hover {
  background-color: #f3f3f3;
}
.page-header {
  margin: 0 0 10px 0;
}
.page-header h1 {
  font-size: 24px;
}
.page-header h1 small {
  letter-spacing: 2px;
  color: #ccc;
}
.pagination {
  margin: 16px 0 16px 0;
}
.pagination>.disabled>a, .pagination>.disabled>a:hover {
  color: #ccc;
}
footer {
  border-top: 1px solid #eee;
  margin: 10px 0 0 0;
  padding-top: 10px;
  color: #999;
}
/* icon fix */
.baselined {
  top: 2px;
}
/* Custom container */
.container-narrow {
  margin: 0 auto;
  max-width: 700px; }

.container-narrow > hr {
  margin: 30px 0; }

.navbar .nav {
  float: right; }

/* post-full*/
.post-full {
  margin-bottom: 40px;
}
.post-full .date {
  margin-bottom: 20px;
  font-weight: bold;
}
/* tag_box */
.tag_box {
  list-style: none;
  margin: 0;
  overflow: hidden; }

.tag_box li {
  line-height: 28px; }

.tag_box li i {
  opacity: 0.9; }

.tag_box.inline li {
  float: left; }

.tag_box a {
  margin: 0 2px;
  text-decoration: none;
}


/* posts index */
.posts-list {
  margin: 0;
  padding: 0;
  list-style: none;
}
.posts-list span {
  font-family: monospace;
  color: #999;
}
.post-list h2 {
  border-top: 1px solid #aaa;
  padding-top: 10px;
}
.post-list .date {
  margin: 30px 0 0 3px;
}
.post-list .tag_box {
  margin: 26px 0 0 0;
}

.post > h3.title {
  position: relative;
  padding-top: 10px; }

.post > h3.title span.date {
  position: absolute;
  right: 0;
  font-size: 0.9em; }

.post > .more {
  margin: 10px 0;
  text-align: left; }

.post-share {
  float: right;
  list-style: none;
  margin: 0;
  padding: 0;
}
.post-share li {
  margin: 0;
  float: left;
}
.post-share li.fb, .post-share li.gp {
  margin-right: 30px;
}

/* authors and tags */
.authorsbtn span {
  font-size: .8em;
  background-color: #ade;
  padding: 1px 3px;
  margin-left: 3px;
  color: #8ac;
  border-radius: inherit;
}
.tagbtn span {
  font-size: .8em;
  background-color: #9bd;
  padding: 1px 3px;
  margin-left: 3px;
  color: #468;
  border-radius: inherit;
}

/* footer */
.sponsor {
  text-align: right;
}

